[project]
name = "tuxoff"
version = "v1"
description = "Terminal-based repack manager for Linux"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "playwright-stealth>=2.0.2",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "textual>=8.1.1",
]

[tool.uv]
package = true

[project.scripts]
tuxoff = "tuxoff.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
